# pandasAI-playaround

./: .env.example  .gitignore  pyproject.toml  run.py
.codebuddy/rules/: git_tracking.mdc
backend/: config.py  main.py
backend/api/: __init__.py  dependencies.py  routes.py
backend/models/: __init__.py  requests.py  responses.py
backend/services/: __init__.py  data_manager.py  session_manager.py
docs/: ARCHITECTURE.md  README.md  WORKFLOW.md
docs/backend/: API.md
docs/frontend/: DESIGN.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  config.js  dom.js  handlers.js  state.js  ui.js  utils.js
uploads/2880c810/: SNPL-01_PRO_Excel数据集_20260402135405.xlsx
